[package]
name = "data_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"